// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLink /> renders component as button 1`] = `
.c0 {
  z-index: 1;
  padding: 0;
  border: none;
  border-radius: 50px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: rgb(111,30,81);
  color: #ffffff;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
}

.c0:hover {
  background: #ffffff;
  color: rgb(111,30,81);
  border: 2px solid rgb(111,30,81);
}

.c1 {
  padding: 0 20px 0 30px;
  text-transform: uppercase;
  font-size: 32px;
}

.c2 {
  padding: 10px;
  position: relative;
  border-radius: 50%;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  border: 3px solid #ffffff;
  background-color: #ffffff;
}

.c2::before {
  content: ' ';
  position: absolute;
  top: 0.5px;
  left: -1px;
  border: 3.5px solid rgb(111,30,81);
  border-radius: 50%;
  padding: 14px;
}

.c3::before {
  color: rgb(111,30,81);
}

<button
  aria-label="Entre em contato"
  class="c0"
>
  <span
    class="c1"
  >
    +
  </span>
  <span
    class="c2"
  >
    <i
      class="c3 fa fa-arrow-right"
    />
  </span>
</button>
`;

exports[`<ButtonLink /> renders component as link 1`] = `
.c0 {
  padding: 0 20px 0 30px;
  text-transform: uppercase;
  font-size: 14px;
}

<span
  class="c0"
>
  Confira
</span>
`;

exports[`<ButtonLink /> verify if disabled 1`] = `
.c0 {
  z-index: 1;
  padding: 0;
  border: none;
  border-radius: 50px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: rgb(111,30,81);
  color: #ffffff;
  font-size: 14px;
  font-weight: 500;
  cursor: pointer;
  background-color: gray;
  cursor: not-allowed;
}

.c1 {
  padding: 0 20px 0 30px;
  text-transform: uppercase;
  font-size: 14px;
}

.c2 {
  padding: 10px;
  position: relative;
  border-radius: 50%;
  -webkit-transition: all 0.5s ease;
  transition: all 0.5s ease;
  border: 3px solid #ffffff;
  background-color: #ffffff;
}

.c2::before {
  content: ' ';
  position: absolute;
  top: 0.5px;
  left: -1px;
  border: 3.5px solid rgb(111,30,81);
  border-radius: 50%;
  padding: 14px;
}

.c3::before {
  color: rgb(111,30,81);
}

<button
  aria-label="Enviar"
  class="c0"
  disabled=""
  type="submit"
>
  <span
    class="c1"
  >
    Enviar
  </span>
  <span
    class="c2"
  >
    <i
      class="c3 fa fa-arrow-right"
    />
  </span>
</button>
`;
